--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    font-family: 'Roboto', Arial, sans-serif;
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
     font-size: 1.1rem;
     margin: 0rem;
 }
