--- a/src/styles/calculator.css
+++ b/src/styles/calculator.css
@@ -1,8 +1,7 @@
 @import './colors.css';
 
 .calculator {
-    font-family: 'Roboto Thin', sans-serif;
-    font-weight: 100;
+    font-family: Helvetica, Arial, sans-serif;
     display: inline-block;
     margin: 1rem 0.7rem 1rem 0.7rem;
     padding: 0rem 1.1rem 0.7rem 1.1rem;
@@ -21,6 +20,8 @@
 }
 
 .legend {
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
+    font-weight: 500;
     padding: 0 0.3rem;
 }
 
@@ -67,8 +68,9 @@
 }
 
 .input {
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
     font-size: 1.2rem;
-    font-weight: 700;
+    font-weight: 500;
     color: white;
     text-align: center;
     width: 75%;
